frontend/tests/cases/negative/notInScopeTyConInInstanceHead.gr
interface Simple a

-- type SimpleDT is not in scope
instance Simple SimpleDT
